<resources>
    <string name="app_name">Session1</string>
    <string name="wsr">WSR Connect</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sing_in">Sing In</string>
    <string name="sing_up">Sing Up</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="chats">Chats</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>