<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ProfileFragment">

    <ImageView
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/text_color"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#E3F2FD"
        android:textSize="20sp"
        android:text="@string/profile"
        android:fontFamily="@font/main_font"
        app:layout_constraintStart_toStartOf="@id/topBar"
        app:layout_constraintTop_toTopOf="@id/topBar"
        app:layout_constraintEnd_toEndOf="@id/topBar"
        app:layout_constraintBottom_toBottomOf="@id/topBar"/>

    <ImageView
        android:id="@+id/catImg"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@drawable/cat"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toBottomOf="@id/topBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    
    <TextView
        android:id="@+id/emailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/catImg"
        app:layout_constraintStart_toStartOf="@id/catImg"
        android:text="example@mail.com"
        android:textColor="#FAFAFA"
        android:textSize="18sp"
        android:layout_marginBottom="12dp"
        android:layout_marginStart="17dp"
        android:layout_marginLeft="17dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/emailText"
        app:layout_constraintStart_toStartOf="@id/catImg"
        android:text="MyNameOne"
        android:textColor="#FAFAFA"
        android:textSize="24sp"
        android:layout_marginStart="17dp"
        android:layout_marginLeft="17dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/catImg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp"
        android:layout_marginStart="26dp"
        android:layout_marginLeft="26dp"
        android:layout_marginEnd="26dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color"
            android:text="@string/name"
            android:textSize="14sp"
            android:fontFamily="@font/main_font"
            android:layout_marginBottom="5dp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/nameEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <ImageView
                android:id="@+id/editNameBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_pencil"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="15dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_marginTop="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color"
            android:text="@string/email"
            android:textSize="14sp"
            android:fontFamily="@font/main_font"
            android:layout_marginBottom="5dp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/emailEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <ImageView
                android:id="@+id/editEmailBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_pencil"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="15dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_marginTop="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color"
            android:text="@string/password"
            android:textSize="14sp"
            android:fontFamily="@font/main_font"
            android:layout_marginBottom="5dp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/passwordEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:inputType="textPassword"/>

            <ImageView
                android:id="@+id/editPasswordBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_pencil"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="15dp" />

            <ImageView
                android:id="@+id/showBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_eye"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@id/editPasswordBtn"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="15dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <Button
        android:id="@+id/exitBtn"
        android:layout_width="126dp"
        android:layout_height="52dp"
        android:text="@string/exit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="37dp"
        style="@style/ButtonSecondary"/>

</androidx.constraintlayout.widget.ConstraintLayout>